stop horizontal scroll navigation in chrome
this is just for me.

--- a/src/dev/swatches.css
+++ b/src/dev/swatches.css
@@ -1,3 +1,7 @@
+html, body {
+  overscroll-behavior: none;
+}
+
 #root {
   width: 100%;
   box-sizing: border-box;
